feat: created the utility to actvate or not the 2FA

--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -109,8 +109,7 @@
                     <div>
                         <p>
                             <strong>{% translate "Usuario:" %}</strong> 
-                            <a href="{% url 'freelancer_profile_view' application.user.username %}" 
-                               class="text-blue-500 hover:underline">
+                            <a href="{%{% load i18n %}text-blue-500 hover:underline">
                                {{ application.user.username }}
                             </a>
                         </p>                     
