--- a/src/templates/settings/security_settings.html
+++ b/src/templates/settings/security_settings.html
@@ -11,26 +11,36 @@
     {% include "settings/settings_navbar.html" with section='security' %}
 
     <div class="bg-primary_lightest p-8 rounded-lg shadow-lg w-full max-w-lg">
-        <h1 class="text-3xl font-semibold text-primary_black mb-6">{% translate "Factor de Doble Autenticacion" %}</h1>
+        <div>
+            <h2 class="text-3xl font-semibold text-primary_black mb-6">{% translate "Factor de Doble Autenticacion" %}
+            </h2>
 
-        <form action="{% url 'toggle_2fa' %}" method="POST">
-            {% csrf_token %}
-            <label for="has_2FA_on" class="text-primary_black text-lg font-medium">
-                {% translate "Activar el Factor de Doble autenticacion" %}
-            </label>
+            <form action="{% url 'toggle_2fa' %}" method="POST">
+                {% csrf_token %}
+                <label for="has_2FA_on" class="text-primary_black text-lg font-medium">
+                    {% translate "Activar el Factor de Doble autenticacion" %}
+                </label>
 
-            <!-- Tailwind Toggle Switch -->
-            <div class="relative inline-block w-12 h-6 align-middle select-none transition duration-200 ease-in">
-                <input type="checkbox" name="has_2FA_on" id="has_2FA_on" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer transition duration-200 ease-in transform
+                <!-- Tailwind Toggle Switch -->
+                <div class="relative inline-block w-12 h-6 align-middle select-none transition duration-200 ease-in">
+                    <input type="checkbox" name="has_2FA_on" id="has_2FA_on" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer transition duration-200 ease-in transform
                {% if has_2FA_on %}
                    translate-x-6 border-transparent
                {% endif %}" {% if has_2FA_on %} checked {% endif %}>
-                <label for="has_2FA_on"
-                    class="block overflow-hidden h-6 rounded-full bg-primary_medium cursor-pointer"></label>
-            </div>
+                    <label for="has_2FA_on"
+                        class="block overflow-hidden h-6 rounded-full bg-primary_medium cursor-pointer"></label>
+                </div>
 
-            <button type="submit" class="mt-4 bg-primary_dark text-white py-2 px-4 rounded-md">{% translate "Guardar"%}</button>
-        </form>
+                <button type="submit" class="mt-4 bg-primary_dark text-white py-2 px-4 rounded-md">{% translate "Guardar" %}</button>
+            </form>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="mb-5 text-3xl font-semibold text-primary_black">{% translate "Reestablecer credenciales" %}</h2>
+            <!-- el link y toda esta logica esta manejada desde user, pero la template esta en settings -->
+            {% url 'restore_password' as restore_password %}
+            {% include "utils/anchor_button.html" with type=1 label="Reestablecer redenciales" url=restore_password%}
+        </div>
     </div>
 </div>
 </div>
