--- a/src/templates/projects/data_project.html
+++ b/src/templates/projects/data_project.html
@@ -224,7 +224,7 @@
     
         <script type="text/javascript" src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
         <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
-        
+
         <div class="container">
             <!-- Panel de Reporte PDF -->
             <h1 class="text-primary_black text-2xl font-bold mt-4">Reporte PDF</h1>
@@ -235,6 +235,10 @@
                 <p class="text-lg text-gray-700 mb-6">
                     Haz clic en el botón de abajo para generar un informe en formato PDF con los hitos, tareas y progreso del proyecto.
                 </p>
+
+                <a href="{% url 'report_settings' project.id %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                    Customize Report Settings
+                </a>
         
                 <!-- Botón para Generar el Reporte PDF -->
                 <div class="flex justify-start">
