--- a/src/templates/profile/profile_card.html
+++ b/src/templates/profile/profile_card.html
@@ -21,7 +21,7 @@
     </div>
     
     <!-- Stats -->
-    <div class="flex justify-center gap-4 text-gray-700 mt-2">
+    <div class="flex justify-center gap-4 text-gray-700">
       <div class="flex items-center gap-1 text-blue-900">
         <svg class="w-4 h-4 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
           <path d="M10 15l-5.878 3.09 1.123-6.545L.489 6.91l6.572-.955L10 0l2.939 5.955 6.572.955-4.756 4.635 1.123 6.545z" />
@@ -31,13 +31,12 @@
     </div>
 
     <!-- Content -->
-    <div class="text-center mt-2">
+    <div class="text-center">
       <a href="../profile/freelancer_profile/{{freelancer.user.username}}" class="font-semibold text-lg">{{ freelancer.user.username }}</a>
-      <p class="text-sm text-gray-500">{% translate "Freelance Web Designer" %}</p>
     </div>
 
     <!-- Message Button -->
-    <div class="p-4 flex justify-center items-center">
+    <div class="p-6 flex justify-center items-center">
         {% trans "Mensaje" as translated_label %}
         {% include 'utils/anchor_button.html' with label=translated_label type=1 url="../chat/" %}
     </div>
