--- a/src/templates/dashboard/company_dashboard.html
+++ b/src/templates/dashboard/company_dashboard.html
@@ -75,20 +75,14 @@
 
 </div>
 
-<!-- SECTION 3 - FUTURE EVENTS -->
+<!-- SECTION 3 - SUCCESS ANALISIS -->
 <div class="w-full flex-1 flex flex-col overflow-hidden">
     <div class="flex justify-between items-center mb-2">
-        <p class="text-lg font-bold text-primary_black"> {% translate "Próximos Eventos" %} </p>
+        <p class="text-lg font-bold text-primary_black"> {% translate "Análisis de éxito" %} </p>
     </div>
     <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
         <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
-            {% for task in freelancer_pending_tasks %}
-                <div>
-                    {% include 'projects/task_card.html' with list=True %}
-                </div>
-            {% empty %}
-                <p class="text-gray-500 text-center w-full"> {% translate "No hay tareas pendientes." %} </p>
-            {% endfor %}
+
         </div>
     </div>
 </div>
