--- a/src/templates/projects/calendar.html
+++ b/src/templates/projects/calendar.html
@@ -8,10 +8,14 @@
 <div id="calendar"></div>
 <!-- Contenedor del calendario -->
 
-<!-- Incluir FullCalendar desde un CDN -->
-<link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.css" rel="stylesheet">
-<link href="{% static 'css/project/calendar_css.css' %}" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.0/main.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.js"></script>
+<script type="text/javascript">
+    var projectId = "{{ project.id }}";
+</script>
+
 
 <script src="{% static 'js/project/calendar.js' %}"></script>
 {% endblock %}
